--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1,12 +1,13 @@
+/* This beautiful CSS-File has been crafted with LESS (lesscss.org) and compiled by simpLESS (wearekiss.com/simpless) */
 /*!
- * Bootstrap v1.4.0
+ * Bootstrap @VERSION
  *
  * Copyright 2011 Twitter, Inc
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
- * Date: Sun Nov 20 21:42:29 PST 2011
+ * Date: @DATE
  */
 /* Reset.less
  * Props to Eric Meyer (meyerweb.com) for his CSS reset file. We're using an adapted version here	that cuts out some of the reset HTML elements we will never need here (i.e., dfn, samp, etc).
@@ -14,6 +15,7 @@
 html, body {
   margin: 0;
   padding: 0;
+  direction: rtl;
 }
 h1,
 h2,
@@ -183,7 +185,7 @@ textarea {
 body {
   background-color: #ffffff;
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 18px;
@@ -221,11 +223,11 @@ body {
 .container-fluid > .sidebar {
   position: absolute;
   top: 0;
-  left: 20px;
+  right: 20px;
   width: 220px;
 }
 .container-fluid > .content {
-  margin-left: 240px;
+  margin-right: 240px;
 }
 a {
   color: #0069d6;
@@ -251,7 +253,7 @@ a:hover {
 }
 .row {
   zoom: 1;
-  margin-left: -20px;
+  margin-right: -20px;
 }
 .row:before, .row:after {
   display: table;
@@ -263,8 +265,8 @@ a:hover {
 }
 .row > [class*="span"] {
   display: inline;
-  float: left;
-  margin-left: 20px;
+  float: right;
+  margin-right: 20px;
 }
 .span1 {
   width: 40px;
@@ -381,10 +383,10 @@ a:hover {
   width: 620px;
 }
 .row > .offset-one-third {
-  margin-left: 340px;
+  margin-right: 340px;
 }
 .row > .offset-two-thirds {
-  margin-left: 660px;
+  margin-right: 660px;
 }
 /* Typography.less
  * Headings, body text, lists, code, and more for a versatile and durable typography system
@@ -478,7 +480,7 @@ li {
 }
 ul.unstyled {
   list-style: none;
-  margin-left: 0;
+  margin-right: 0;
 }
 dl {
   margin-bottom: 18px;
@@ -490,7 +492,7 @@ dl dt {
   font-weight: bold;
 }
 dl dd {
-  margin-left: 9px;
+  margin-right: 9px;
 }
 hr {
   margin: 20px 0 19px;
@@ -511,8 +513,8 @@ em {
 }
 blockquote {
   margin-bottom: 18px;
-  border-left: 5px solid #eee;
-  padding-left: 15px;
+  border-right: 5px solid #eee;
+  padding-right: 15px;
 }
 blockquote p {
   font-size: 14px;
@@ -537,7 +539,7 @@ address {
 }
 code, pre {
   padding: 0 3px 2px;
-  font-family: Monaco, Andale Mono, Courier New, monospace;
+  font-family: Courier New, monospace;
   font-size: 12px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -580,7 +582,7 @@ fieldset legend {
   font-size: 19.5px;
   line-height: 1;
   color: #404040;
-  *padding: 0 0 5px 145px;
+  *padding: 0 145px 5px 0;
   /* IE6-7 */
 
   *line-height: 1.5;
@@ -603,7 +605,7 @@ label,
 input,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: normal;
@@ -612,13 +614,13 @@ label {
   padding-top: 6px;
   font-size: 13px;
   line-height: 18px;
-  float: left;
+  float: right;
   width: 130px;
-  text-align: right;
+  text-align: left;
   color: #404040;
 }
 form .input {
-  margin-left: 150px;
+  margin-right: 150px;
 }
 input[type=checkbox], input[type=radio] {
   cursor: pointer;
@@ -816,97 +818,97 @@ input.span1, textarea.span1 {
   display: inline-block;
   float: none;
   width: 30px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span2, textarea.span2 {
   display: inline-block;
   float: none;
   width: 90px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span3, textarea.span3 {
   display: inline-block;
   float: none;
   width: 150px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span4, textarea.span4 {
   display: inline-block;
   float: none;
   width: 210px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span5, textarea.span5 {
   display: inline-block;
   float: none;
   width: 270px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span6, textarea.span6 {
   display: inline-block;
   float: none;
   width: 330px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span7, textarea.span7 {
   display: inline-block;
   float: none;
   width: 390px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span8, textarea.span8 {
   display: inline-block;
   float: none;
   width: 450px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span9, textarea.span9 {
   display: inline-block;
   float: none;
   width: 510px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span10, textarea.span10 {
   display: inline-block;
   float: none;
   width: 570px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span11, textarea.span11 {
   display: inline-block;
   float: none;
   width: 630px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span12, textarea.span12 {
   display: inline-block;
   float: none;
   width: 690px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span13, textarea.span13 {
   display: inline-block;
   float: none;
   width: 750px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span14, textarea.span14 {
   display: inline-block;
   float: none;
   width: 810px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span15, textarea.span15 {
   display: inline-block;
   float: none;
   width: 870px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input.span16, textarea.span16 {
   display: inline-block;
   float: none;
   width: 930px;
-  margin-left: 0;
+  margin-right: 0;
 }
 input[disabled],
 select[disabled],
@@ -924,9 +926,9 @@ textarea[readonly] {
   margin-bottom: 18px;
   padding: 17px 20px 18px 150px;
   border-top: 1px solid #ddd;
-  -webkit-border-radius: 0 0 3px 3px;
-  -moz-border-radius: 0 0 3px 3px;
-  border-radius: 0 0 3px 3px;
+  -webkit-border-radius: 3px 3px 0 0;
+  -moz-border-radius: 3px 3px 0 0;
+  border-radius: 3px 3px 0 0;
 }
 .actions .secondary-action {
   float: right;
@@ -943,7 +945,7 @@ textarea[readonly] {
   color: #bfbfbf;
 }
 .help-inline {
-  padding-left: 5px;
+  padding-right: 5px;
   *position: relative;
   /* IE6-7 */
 
@@ -959,7 +961,7 @@ textarea[readonly] {
   color: #808080;
 }
 .inline-inputs span {
-  padding: 0 2px 0 1px;
+  padding: 0 1px 0 2px;
 }
 .input-prepend input, .input-append input {
   -webkit-border-radius: 0 3px 3px 0;
@@ -971,13 +973,13 @@ textarea[readonly] {
   background: #f5f5f5;
   border: 1px solid #ccc;
   z-index: 2;
-  float: left;
+  float: right;
   display: block;
   width: auto;
   min-width: 16px;
   height: 18px;
-  padding: 4px 4px 4px 5px;
-  margin-right: -1px;
+  padding: 4px 5px 4px 4px;
+  margin-left: -1px;
   font-weight: normal;
   line-height: 18px;
   color: #bfbfbf;
@@ -997,7 +999,7 @@ textarea[readonly] {
 
 }
 .input-append input {
-  float: left;
+  float: right;
   -webkit-border-radius: 3px 0 0 3px;
   -moz-border-radius: 3px 0 0 3px;
   border-radius: 3px 0 0 3px;
@@ -1006,8 +1008,8 @@ textarea[readonly] {
   -webkit-border-radius: 0 3px 3px 0;
   -moz-border-radius: 0 3px 3px 0;
   border-radius: 0 3px 3px 0;
-  margin-right: 0;
-  margin-left: -1px;
+  margin-left: 0;
+  margin-right: -1px;
 }
 .inputs-list {
   margin: 0 0 5px;
@@ -1023,9 +1025,9 @@ textarea[readonly] {
   float: none;
   width: auto;
   padding: 0;
-  margin-left: 20px;
+  margin-right: 20px;
   line-height: 18px;
-  text-align: left;
+  text-align: right;
   white-space: normal;
 }
 .inputs-list label strong {
@@ -1036,7 +1038,7 @@ textarea[readonly] {
   font-weight: normal;
 }
 .inputs-list .inputs-list {
-  margin-left: 25px;
+  margin-right: 25px;
   margin-bottom: 10px;
   padding-top: 0;
 }
@@ -1048,24 +1050,24 @@ textarea[readonly] {
 }
 .inputs-list input[type=radio], .inputs-list input[type=checkbox] {
   margin-bottom: 0;
-  margin-left: -20px;
-  float: left;
+  margin-right: -20px;
+  float: right;
 }
 .form-stacked {
-  padding-left: 20px;
+  padding-right: 20px;
 }
 .form-stacked fieldset {
   padding-top: 9px;
 }
 .form-stacked legend {
-  padding-left: 0;
+  padding-right: 0;
 }
 .form-stacked label {
   display: block;
   float: none;
   width: auto;
   font-weight: bold;
-  text-align: left;
+  text-align: right;
   line-height: 20px;
   padding-top: 0;
 }
@@ -1073,7 +1075,7 @@ textarea[readonly] {
   margin-bottom: 9px;
 }
 .form-stacked .clearfix div.input {
-  margin-left: 0;
+  margin-right: 0;
 }
 .form-stacked .inputs-list {
   margin-bottom: 0;
@@ -1088,13 +1090,13 @@ textarea[readonly] {
 .form-stacked div.clearfix.error {
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 10px;
+  padding-right: 10px;
   margin-top: 0;
-  margin-left: -10px;
+  margin-right: -10px;
 }
 .form-stacked .actions {
-  margin-left: -20px;
-  padding-left: 20px;
+  margin-right: -20px;
+  padding-right: 20px;
 }
 /*
  * Tables.less
@@ -1110,7 +1112,7 @@ table {
 table th, table td {
   padding: 10px 10px 9px;
   line-height: 18px;
-  text-align: left;
+  text-align: right;
 }
 table th {
   padding-top: 9px;
@@ -1139,7 +1141,7 @@ table tbody th {
   border-radius: 4px;
 }
 .bordered-table th + th, .bordered-table td + td, .bordered-table th + td {
-  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
 }
 .bordered-table thead tr:first-child th:first-child, .bordered-table tbody tr:first-child td:first-child {
   -webkit-border-radius: 4px 0 0 0;
@@ -1220,7 +1222,7 @@ table .header {
 }
 table .header:after {
   content: "";
-  float: right;
+  float: left;
   margin-top: 7px;
   border-width: 0 4px 4px;
   border-style: solid;
@@ -1323,10 +1325,10 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   position: relative;
 }
 .topbar h3 a, .topbar .brand {
-  float: left;
+  float: right;
   display: block;
   padding: 8px 20px 12px;
-  margin-left: -20px;
+  margin-right: -20px;
   color: #ffffff;
   font-size: 20px;
   font-weight: 200;
@@ -1341,7 +1343,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   color: #ffffff;
 }
 .topbar form {
-  float: left;
+  float: right;
   margin: 5px 0 0 0;
   position: relative;
   filter: alpha(opacity=100);
@@ -1355,7 +1357,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 .topbar input {
   background-color: #444;
   background-color: rgba(255, 255, 255, 0.3);
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: normal;
   font-weight: 13px;
   line-height: 1;
@@ -1415,14 +1417,14 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 }
 .topbar div > ul, .nav {
   display: block;
-  float: left;
-  margin: 0 10px 0 0;
+  float: right;
+  margin: 0 0 0 10px;
   position: relative;
   left: 0;
 }
 .topbar div > ul > li, .nav > li {
   display: block;
-  float: left;
+  float: right;
 }
 .topbar div > ul a, .nav a {
   display: block;
@@ -1441,14 +1443,14 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 }
 .topbar div > ul.secondary-nav, .nav.secondary-nav {
   float: right;
-  margin-left: 10px;
-  margin-right: 0;
+  margin-right: 10px;
+  margin-left: 0;
 }
 .topbar div > ul.secondary-nav .menu-dropdown,
 .nav.secondary-nav .menu-dropdown,
 .topbar div > ul.secondary-nav .dropdown-menu,
 .nav.secondary-nav .dropdown-menu {
-  right: 0;
+  left: 0;
   border: 0;
 }
 .topbar div > ul a.menu:hover,
@@ -1539,7 +1541,7 @@ a.menu:after, .dropdown-toggle:after {
   text-indent: -99999px;
   vertical-align: top;
   margin-top: 8px;
-  margin-left: 4px;
+  margin-right: 4px;
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
   border-top: 4px solid #ffffff;
@@ -1550,7 +1552,7 @@ a.menu:after, .dropdown-toggle:after {
 }
 .menu-dropdown, .dropdown-menu {
   background-color: #ffffff;
-  float: left;
+  float: right;
   display: none;
   position: absolute;
   top: 40px;
@@ -1566,9 +1568,9 @@ a.menu:after, .dropdown-toggle:after {
   border-color: rgba(0, 0, 0, 0.2);
   border-style: solid;
   border-width: 0 1px 1px;
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
+  -webkit-border-radius: 6px 6px 0 0;
+  -moz-border-radius: 6px 6px 0 0;
+  border-radius: 6px 6px 0 0;
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -1649,7 +1651,7 @@ a.menu:after, .dropdown-toggle:after {
   clear: both;
 }
 .tabs > li, .pills > li {
-  float: left;
+  float: right;
 }
 .tabs > li > a, .pills > li > a {
   display: block;
@@ -1665,12 +1667,12 @@ a.menu:after, .dropdown-toggle:after {
 }
 .tabs > li > a {
   padding: 0 15px;
-  margin-right: 2px;
+  margin-left: 2px;
   line-height: 34px;
   border: 1px solid transparent;
-  -webkit-border-radius: 4px 4px 0 0;
-  -moz-border-radius: 4px 4px 0 0;
-  border-radius: 4px 4px 0 0;
+  -webkit-border-radius: 0 0 4px 4px;
+  -moz-border-radius: 0 0 4px 4px;
+  border-radius: 0 0 4px 4px;
 }
 .tabs > li > a:hover {
   text-decoration: none;
@@ -1687,14 +1689,14 @@ a.menu:after, .dropdown-toggle:after {
 .tabs .menu-dropdown, .tabs .dropdown-menu {
   top: 35px;
   border-width: 1px;
-  -webkit-border-radius: 0 6px 6px 6px;
-  -moz-border-radius: 0 6px 6px 6px;
-  border-radius: 0 6px 6px 6px;
+  -webkit-border-radius: 6px 6px 6px 0;
+  -moz-border-radius: 6px 6px 6px 0;
+  border-radius: 6px 6px 6px 0;
 }
 .tabs a.menu:after, .tabs .dropdown-toggle:after {
   border-top-color: #999;
   margin-top: 15px;
-  margin-left: 5px;
+  margin-right: 5px;
 }
 .tabs li.open.menu .menu, .tabs .open.dropdown .dropdown-toggle {
   border-color: #999;
@@ -1703,7 +1705,7 @@ a.menu:after, .dropdown-toggle:after {
   border-top-color: #555;
 }
 .pills a {
-  margin: 5px 3px 5px 0;
+  margin: 5px 0 5px 3px;
   padding: 0 15px;
   line-height: 30px;
   text-shadow: 0 1px 1px #ffffff;
@@ -1974,7 +1976,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   border: 0;
 }
 .close {
-  float: right;
+  float: left;
   color: #000000;
   font-size: 20px;
   font-weight: bold;
@@ -2062,7 +2064,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   box-shadow: none;
 }
 .alert-message.block-message ul, .alert-message.block-message p {
-  margin-right: 30px;
+  margin-left: 30px;
 }
 .alert-message.block-message ul {
   margin-bottom: 0;
@@ -2100,7 +2102,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   margin: 18px 0;
 }
 .pagination ul {
-  float: left;
+  float: right;
   margin: 0;
   border: 1px solid #ddd;
   border: 1px solid rgba(0, 0, 0, 0.15);
@@ -2115,13 +2117,13 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   display: inline;
 }
 .pagination a {
-  float: left;
+  float: right;
   padding: 0 14px;
   line-height: 34px;
-  border-right: 1px solid;
-  border-right-color: #ddd;
-  border-right-color: rgba(0, 0, 0, 0.15);
-  *border-right-color: #ddd;
+  border-left: 1px solid;
+  border-left-color: #ddd;
+  border-left-color: rgba(0, 0, 0, 0.15);
+  *border-left-color: #ddd;
   /* IE6-7 */
 
   text-decoration: none;
@@ -2175,10 +2177,10 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 .modal {
   position: fixed;
   top: 50%;
-  left: 50%;
+  right: 50%;
   z-index: 11000;
   width: 560px;
-  margin: -250px 0 0 -280px;
+  margin: -250px -280px 0 0;
   background-color: #ffffff;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
@@ -2223,9 +2225,9 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   background-color: #f5f5f5;
   padding: 14px 15px 15px;
   border-top: 1px solid #ddd;
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
+  -webkit-border-radius: 6px 6px 0 0;
+  -moz-border-radius: 6px 6px 0 0;
+  border-radius: 6px 6px 0 0;
   -webkit-box-shadow: inset 0 1px 0 #ffffff;
   -moz-box-shadow: inset 0 1px 0 #ffffff;
   box-shadow: inset 0 1px 0 #ffffff;
@@ -2241,8 +2243,8 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   clear: both;
 }
 .modal-footer .btn {
-  float: right;
-  margin-left: 5px;
+  float: left;
+  margin-right: 5px;
 }
 .modal .popover, .modal .twipsy {
   z-index: 12000;
@@ -2267,8 +2269,8 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 }
 .twipsy.above .twipsy-arrow {
   bottom: 0;
-  left: 50%;
-  margin-left: -5px;
+  right: 50%;
+  margin-right: -5px;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 5px solid #000000;
@@ -2283,8 +2285,8 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 }
 .twipsy.below .twipsy-arrow {
   top: 0;
-  left: 50%;
-  margin-left: -5px;
+  right: 50%;
+  margin-right: -5px;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid #000000;
@@ -2316,15 +2318,15 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 .popover {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: 1000;
   padding: 5px;
   display: none;
 }
 .popover.above .arrow {
   bottom: 0;
-  left: 50%;
-  margin-left: -5px;
+  right: 50%;
+  margin-right: -5px;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 5px solid #000000;
@@ -2339,8 +2341,8 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 }
 .popover.below .arrow {
   top: 0;
-  left: 50%;
-  margin-left: -5px;
+  right: 50%;
+  margin-right: -5px;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid #000000;
@@ -2429,7 +2431,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   background-color: #62cffc;
 }
 .media-grid {
-  margin-left: -20px;
+  margin-right: -20px;
   margin-bottom: 0;
   zoom: 1;
 }
@@ -2445,9 +2447,9 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   display: inline;
 }
 .media-grid a {
-  float: left;
+  float: right;
   padding: 4px;
-  margin: 0 0 18px 20px;
+  margin: 0 20px 18px 0;
   border: 1px solid #ddd;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
