--- a/lib/patterns.less
+++ b/lib/patterns.less
@@ -40,10 +40,10 @@
   }
   h3 a,
   .brand {
-    float: left;
+    float: right;
     display: block;
     padding: 8px 20px 12px;
-    margin-left: -20px; // negative indent to left-align the text down the page
+    margin-right: -20px; // negative indent to left-align the text down the page
     color: @white;
     font-size: 20px;
     font-weight: 200;
@@ -62,7 +62,7 @@
 
   // Search Form
   form {
-    float: left;
+    float: right;
     margin: 5px 0 0 0;
     position: relative;
     .opacity(100);
@@ -131,13 +131,13 @@
 .topbar div > ul,
 .nav {
   display: block;
-  float: left;
-  margin: 0 10px 0 0;
+  float: right;
+  margin: 0 0 0 10px;
   position: relative;
   left: 0;
   > li {
     display: block;
-    float: left;
+    float: right;
   }
   a {
     display: block;
@@ -158,12 +158,12 @@
   // Secondary (floated right) nav in topbar
   &.secondary-nav {
     float: right;
-    margin-left: 10px;
-    margin-right: 0;
+    margin-right: 10px;
+    margin-left: 0;
     // backwards compatibility
     .menu-dropdown,
     .dropdown-menu {
-      right: 0;
+      left: 0;
       border: 0;
     }
   }
@@ -231,7 +231,7 @@ a.menu:after,
   text-indent: -99999px;
   vertical-align: top;
   margin-top: 8px;
-  margin-left: 4px;
+  margin-right: 4px;
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
   border-top: 4px solid @white;
@@ -242,7 +242,7 @@ a.menu:after,
 .menu-dropdown,
 .dropdown-menu {
   background-color: @white;
-  float: left;
+  float: right;
   display: none; // None by default, but block on "open" of the menu
   position: absolute;
   top: 40px;
@@ -258,7 +258,7 @@ a.menu:after,
   border-color: rgba(0,0,0,.2);
   border-style: solid;
   border-width: 0 1px 1px;
-  .border-radius(0 0 6px 6px);
+  .border-radius(6px 6px 0 0);
   .box-shadow(0 2px 4px rgba(0,0,0,.2));
   .background-clip(padding-box);
 
@@ -331,7 +331,7 @@ a.menu:after,
   list-style: none;
   .clearfix();
   > li {
-    float: left;
+    float: right;
     > a {
       display: block;
     }
@@ -348,10 +348,10 @@ a.menu:after,
     margin-bottom: -1px;
     > a {
       padding: 0 15px;
-      margin-right: 2px;
+      margin-left: 2px;
       line-height: (@baseline * 2) - 2;
       border: 1px solid transparent;
-      .border-radius(4px 4px 0 0);
+      .border-radius(0 0 4px 4px);
       &:hover {
         text-decoration: none;
         background-color: #eee;
@@ -377,14 +377,14 @@ a.menu:after,
   .dropdown-menu {
     top: 35px;
     border-width: 1px;
-    .border-radius(0 6px 6px 6px);
+    .border-radius(6px 6px 6px 0);
   }
   // first one for backwards compatibility
   a.menu:after,
   .dropdown-toggle:after {
     border-top-color: #999;
     margin-top: 15px;
-    margin-left: 5px;
+    margin-right: 5px;
   }
   // first one for backwards compatibility
   li.open.menu .menu,
@@ -401,7 +401,7 @@ a.menu:after,
 // Pills
 .pills {
   a {
-    margin: 5px 3px 5px 0;
+    margin: 5px 0 5px 3px;
     padding: 0 15px;
     line-height: 30px;
     text-shadow: 0 1px 1px @white;
@@ -633,7 +633,7 @@ input[type=submit].btn {
 // CLOSE ICONS
 // -----------
 .close {
-  float: right;
+  float: left;
   color: @black;
   font-size: 20px;
   font-weight: bold;
@@ -707,7 +707,7 @@ input[type=submit].btn {
     border-color: #fceec1;
     .box-shadow(none);
     ul, p {
-      margin-right: 30px;
+      margin-left: 30px;
     }
     ul {
       margin-bottom: 0;
@@ -755,7 +755,7 @@ input[type=submit].btn {
   height: @baseline * 2;
   margin: @baseline 0;
   ul {
-    float: left;
+    float: right;
     margin: 0;
     border: 1px solid #ddd;
     border: 1px solid rgba(0,0,0,.15);
@@ -766,13 +766,13 @@ input[type=submit].btn {
     display: inline;
   }
   a {
-    float: left;
+    float: right;
     padding: 0 14px;
     line-height: (@baseline * 2) - 2;
-    border-right: 1px solid;
-    border-right-color: #ddd;
-    border-right-color: rgba(0,0,0,.15);
-    *border-right-color: #ddd; /* IE6-7 */
+    border-left: 1px solid;
+    border-left-color: #ddd;
+    border-left-color: rgba(0,0,0,.15);
+    *border-left-color: #ddd; /* IE6-7 */
     text-decoration: none;
   }
   a:hover,
@@ -832,10 +832,10 @@ input[type=submit].btn {
 .modal {
   position: fixed;
   top: 50%;
-  left: 50%;
+  right: 50%;
   z-index: 11000;
   width: 560px;
-  margin: -250px 0 0 -280px;
+  margin: -250px -280px 0 0;
   background-color: @white;
   border: 1px solid #999;
   border: 1px solid rgba(0,0,0,.3);
@@ -864,13 +864,13 @@ input[type=submit].btn {
   background-color: #f5f5f5;
   padding: 14px 15px 15px;
   border-top: 1px solid #ddd;
-  .border-radius(0 0 6px 6px);
+  .border-radius(6px 6px 0 0);
   .box-shadow(inset 0 1px 0 @white);
   .clearfix();
   margin-bottom: 0;
   .btn {
-    float: right;
-    margin-left: 5px;
+    float: left;
+    margin-right: 5px;
   }
 }
 
@@ -887,8 +887,8 @@ input[type=submit].btn {
 #popoverArrow {
   .above(@arrowWidth: 5px) {
     bottom: 0;
-    left: 50%;
-    margin-left: -@arrowWidth;
+    right: 50%;
+    margin-right: -@arrowWidth;
     border-left: @arrowWidth solid transparent;
     border-right: @arrowWidth solid transparent;
     border-top: @arrowWidth solid @black;
@@ -903,8 +903,8 @@ input[type=submit].btn {
   }
   .below(@arrowWidth: 5px) {
     top: 0;
-    left: 50%;
-    margin-left: -@arrowWidth;
+    right: 50%;
+    margin-right: -@arrowWidth;
     border-left: @arrowWidth solid transparent;
     border-right: @arrowWidth solid transparent;
     border-bottom: @arrowWidth solid @black;
@@ -960,7 +960,7 @@ input[type=submit].btn {
 .popover {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: 1000;
   padding: 5px;
   display: none;
@@ -1036,16 +1036,16 @@ input[type=submit].btn {
 // -----------
 
 .media-grid {
-  margin-left: -@gridGutterWidth;
+  margin-right: -@gridGutterWidth;
   margin-bottom: 0;
   .clearfix();
   li {
     display: inline;
   }
   a {
-    float: left;
+    float: right;
     padding: 4px;
-    margin: 0 0 @baseline @gridGutterWidth;
+    margin: 0 @gridGutterWidth @baseline 0;
     border: 1px solid #ddd;
     .border-radius(4px);
     .box-shadow(0 1px 1px rgba(0,0,0,.075));
