--- a/lib/tables.less
+++ b/lib/tables.less
@@ -17,7 +17,7 @@ table {
   td {
     padding: 10px 10px 9px;
     line-height: @baseline;
-    text-align: left;
+    text-align: right;
   }
   th {
     padding-top: 9px;
@@ -57,7 +57,7 @@ table {
   th + th,
   td + td,
   th + td {
-    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
   }
   thead tr:first-child th:first-child,
   tbody tr:first-child td:first-child {
@@ -127,7 +127,7 @@ table {
     cursor: pointer;
     &:after {
       content: "";
-      float: right;
+      float: left;
       margin-top: 7px;
       border-width: 0 4px 4px;
       border-style: solid;
