--- a/lib/type.less
+++ b/lib/type.less
@@ -91,7 +91,7 @@ li {
 }
 ul.unstyled {
   list-style: none;
-  margin-left: 0;
+  margin-right: 0;
 }
 
 // Description Lists
@@ -104,7 +104,7 @@ dl {
     font-weight: bold;
   }
   dd {
-    margin-left: @baseline / 2;
+    margin-right: @baseline / 2;
   }
 }
 
@@ -135,8 +135,8 @@ em {
 // Blockquotes
 blockquote {
   margin-bottom: @baseline;
-  border-left: 5px solid #eee;
-  padding-left: 15px;
+  border-right: 5px solid #eee;
+  padding-right: 15px;
   p {
     #font > .shorthand(300,14px,@baseline);
     margin-bottom: 0;
@@ -161,7 +161,7 @@ address {
 // Inline and block code styles
 code, pre {
   padding: 0 3px 2px;
-  font-family: Monaco, Andale Mono, Courier New, monospace;
+  font-family: Courier New, monospace;
   font-size: 12px;
   .border-radius(3px);
 }
