--- a/lib/patterns.less
+++ b/lib/patterns.less
@@ -157,7 +157,7 @@
 
   // Secondary (floated right) nav in topbar
   &.secondary-nav {
-    float: right;
+    float: left;
     margin-right: 10px;
     margin-left: 0;
     // backwards compatibility
@@ -351,7 +351,7 @@ a.menu:after,
       margin-left: 2px;
       line-height: (@baseline * 2) - 2;
       border: 1px solid transparent;
-      .border-radius(0 0 4px 4px);
+      .border-radius(4px 4px 0 0);
       &:hover {
         text-decoration: none;
         background-color: #eee;
